app/src/components/features/mocksV2/MockEditorIndex/Editor/Header/index.css
.mock-editor-layout-header.ant-layout-header {
  display: flex;
  align-items: center;
  background-color: var(--requestly-color-background);
}

.mock-editor-layout-header .ant-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.mock-editor-layout-header .header-left-section {
  display: flex;
  align-items: center;
  gap: 2px;
}

.mock-editor-layout-header .header-left-section .rq-breadcrumb {
  margin-left: 0;
}

.mock-editor-layout-header .header-right-section {
  display: flex;
  gap: 12px;
}

.mock-editor-layout-header .header-right-section .ant-btn-icon-only svg {
  color: var(--text-gray);
  transition: 0.2s ease-in-out;
}

.mock-editor-layout-header .header-right-section .ant-btn-icon-only:hover svg {
  color: var(--white);
}

.mock-editor-layout-header .header-right-section .ant-btn {
  font-weight: 500;
}
.mock-editor-options-trigger-icon {
  margin-left: 5px;
}

.mock-editor-options-dropdown-trigger {
  font-size: var(--requestly-font-size-sm, 13px);
  cursor: pointer;
  user-select: none;
  padding: 7px 8px 6px 8px;
  border-radius: var(--border-radius-sm);
  background-color: var(--component-dark-background);
  border: 1px solid transparent;
  transition: border 0.3s;
}

.mock-editor-options-dropdown-trigger.mock-editor-options-dropdown-active {
  border-color: var(--dropdown-active-border-color);
}

